/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java project to get you started.
 * For more details take a look at the Java Quickstart chapter in the Gradle
 * User Manual available at https://docs.gradle.org/5.2.1/userguide/tutorial_java_projects.html
 */

plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building an application
    id 'application'

    id 'checkstyle'
}

sourceCompatibility = 11
targetCompatibility = 11

repositories {
    // Use jcenter for resolving your dependencies.
    // You can declare any Maven/Ivy/file repository here.
    // jcenter()
    mavenCentral()
}

dependencies {
    // Use JUnit test framework
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')

    // Logging
    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    // Units
    compile group: 'javax.measure', name: 'unit-api', version: '2.0-PRD'
    compile group: 'tec.units', name: 'unit-ri', version: '1.0.3'

    compile 'org.liblouis:liblouis-java:4.2.0'
    // CSV parsing
    compile "com.opencsv:opencsv:4.6"

    // SVG
    compile group: 'org.jfree', name: 'jfreesvg', version: '3.4'
}

tasks.withType(Test) {
    useJUnitPlatform()
}

// Copy Braille tables from submodule to working dir
task copyBrailleTables(type: Copy) {
    from "$projectDir/third_party/liblouis/tables/"
    into "$rootDir/src/main/resources/mapping/liblouis"
}
processResources.dependsOn copyBrailleTables
// Abort if files are missing
gradle.taskGraph.afterTask { copyBrailleTables ->
    if(copyBrailleTables.state.noSource){
        throw new GradleException("Could not find liblouis Braille tables in \"$projectDir/third_party/liblouis/tables/\". Please make sure you updated all git submodules using \"git submodule update --init --recursive\" ")
    }
}
// Delete tables on "clean" task
clean {
    delete "$rootDir/src/main/resources/mapping/liblouis"
}

// Define the main class for the application
mainClassName = 'de.tudresden.inf.mci.brailleplot.App'

jar {
    manifest {
        attributes "Main-Class": "de.tudresden.inf.mci.brailleplot.App"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

checkstyleTest {
    showViolations = true
    checkstyleTest.enabled = false
}


    // Needed for Integrationtests

apply from: "$rootDir/integrationTest.gradle"
